--- a/view/frontend/web/template/form/element/street-input.html
+++ b/view/frontend/web/template/form/element/street-input.html
@@ -9,8 +9,9 @@
         data-bind="
         mageInit: {'novaPostSearch':{
        'formSelector':uid,
-        'dataRef': 'data-street-ref',
-       'minSearchLength': 1,
+       'dataRef':'data-street-ref',
+       'minSearchLength':1,
+       'url':'/novapost/ajax_search/warehouse',
        'destinationSelector':'#street_results'}
         },
         event: {change: userChanges},
