Implemented GraphQl queries for cities and warehouses on checkout

--- a/view/frontend/web/template/form/element/city-input.html
+++ b/view/frontend/web/template/form/element/city-input.html
@@ -10,7 +10,7 @@
         mageInit: {'novaPostSearch':{
        'formSelector':uid,
        'minSearchLength':3,
-       'url':'/novapost/ajax_search/city',
+       'url':'/graphql',
        'destinationSelector':'#city_results'}
         },
         event: {change: userChanges},
