--- a/view/frontend/web/template/form/element/street-input.html
+++ b/view/frontend/web/template/form/element/street-input.html
@@ -11,7 +11,8 @@
        'formSelector':uid,
        'dataRef':'data-street-ref',
        'minSearchLength':1,
-       'url':'/novapost/ajax_search/warehouse',
+       'url':'/graphql',
+       'warehouseWidget': true,
        'destinationSelector':'#street_results'}
         },
         event: {change: userChanges},
